--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <title>Ejemplo de tabla con celdas separadas</title>
     <style>
       table, td {
+        background-color: burlywood;
         border:1px solid black;
       }
       table {
-        border-spacing:10px;
+        border-spacing:20px;
       }
     </style>
   </head>
   <body>
-    <table>
+    <table style="background-color: blue;">
       <tr>
         <td>uno</td>
         <td>dos</td>
