Se cambio el color del borde

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       table, td {
         background-color: burlywood;
-        border:1px solid black;
+        border:3px solid rgb(126, 6, 6);
       }
       table {
         border-spacing:20px;
