Se Amplio el espacio entre celdas

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es-ES">
   <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
         border:3px solid rgb(126, 6, 6);
       }
       table {
-        border-spacing:20px;
+        border-spacing:50px;
       }
     </style>
   </head>
